--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11,10 +11,10 @@
   --teal: #20c997;
   --cyan: #029ACF;
   --white: #fff;
-  --gray: #6c757d;
+  --gray: #777;
   --gray-dark: #373a3c;
   --primary: #D9230F;
-  --secondary: #dcdcdc;
+  --secondary: #fff;
   --success: #469408;
   --info: #029ACF;
   --warning: #9B479F;
@@ -169,7 +169,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #6c757d;
+  color: #777;
   text-align: left;
   caption-side: bottom; }
 
@@ -297,7 +297,7 @@ h1, .h1 {
   font-size: 2.5rem; }
 
 h2, .h2 {
-  font-size: 1.25rem; }
+  font-size: 2rem; }
 
 h3, .h3 {
   font-size: 1.75rem; }
@@ -375,7 +375,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #6c757d; }
+  color: #777; }
   .blockquote-footer::before {
     content: "\2014\00A0"; }
 
@@ -400,7 +400,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #6c757d; }
+  color: #777; }
 
 code {
   font-size: 87.5%;
@@ -1424,7 +1424,7 @@ pre {
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(217, 35, 15, 0.25); }
   .form-control::placeholder {
-    color: #6c757d;
+    color: #777;
     opacity: 1; }
   .form-control:disabled, .form-control[readonly] {
     background-color: #ddd;
@@ -1527,7 +1527,7 @@ textarea.form-control {
   margin-left: -1.25rem; }
   .form-check-input[disabled] ~ .form-check-label,
   .form-check-input:disabled ~ .form-check-label {
-    color: #6c757d; }
+    color: #777; }
 
 .form-check-label {
   margin-bottom: 0; }
@@ -2166,7 +2166,7 @@ fieldset:disabled a.btn {
   .btn-link:focus, .btn-link.focus {
     text-decoration: underline; }
   .btn-link:disabled, .btn-link.disabled {
-    color: #6c757d;
+    color: #777;
     pointer-events: none; }
 
 .btn-lg, .btn-group-lg > .btn {
@@ -2394,7 +2394,7 @@ input[type="button"].btn-block {
     text-decoration: none;
     background-color: #D9230F; }
   .dropdown-item.disabled, .dropdown-item:disabled {
-    color: #6c757d;
+    color: #777;
     pointer-events: none;
     background-color: transparent; }
 
@@ -2406,7 +2406,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #6c757d;
+  color: #777;
   white-space: nowrap; }
 
 .dropdown-item-text {
@@ -2680,7 +2680,7 @@ input[type="button"].btn-block {
     background-color: #f9aba2;
     border-color: #f9aba2; }
   .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-    color: #6c757d; }
+    color: #777; }
     .custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
       background-color: #ddd; }
 
@@ -2787,7 +2787,7 @@ input[type="button"].btn-block {
     padding-right: 0.75rem;
     background-image: none; }
   .custom-select:disabled {
-    color: #6c757d;
+    color: #777;
     background-color: #ddd; }
   .custom-select::-ms-expand {
     display: none; }
@@ -2988,7 +2988,7 @@ input[type="button"].btn-block {
   .nav-link:hover, .nav-link:focus {
     text-decoration: none; }
   .nav-link.disabled {
-    color: #6c757d;
+    color: #777;
     pointer-events: none;
     cursor: default; }
 
@@ -3003,7 +3003,7 @@ input[type="button"].btn-block {
     .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
       border-color: #ddd #ddd #ccc; }
     .nav-tabs .nav-link.disabled {
-      color: #6c757d;
+      color: #777;
       background-color: transparent;
       border-color: transparent; }
   .nav-tabs .nav-link.active,
@@ -3483,14 +3483,14 @@ input[type="button"].btn-block {
     .breadcrumb-item + .breadcrumb-item::before {
       display: inline-block;
       padding-right: 0.5rem;
-      color: #6c757d;
+      color: #777;
       content: "/"; }
   .breadcrumb-item + .breadcrumb-item:hover::before {
     text-decoration: underline; }
   .breadcrumb-item + .breadcrumb-item:hover::before {
     text-decoration: none; }
   .breadcrumb-item.active {
-    color: #6c757d; }
+    color: #777; }
 
 .pagination {
   display: flex;
@@ -3534,7 +3534,7 @@ input[type="button"].btn-block {
   border-color: #D9230F; }
 
 .page-item.disabled .page-link {
-  color: #6c757d;
+  color: #777;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -3861,7 +3861,7 @@ input[type="button"].btn-block {
     border-bottom-right-radius: inherit;
     border-bottom-left-radius: inherit; }
   .list-group-item.disabled, .list-group-item:disabled {
-    color: #6c757d;
+    color: #777;
     pointer-events: none;
     background-color: #fff; }
   .list-group-item.active {
@@ -4106,7 +4106,7 @@ a.close.disabled {
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #6c757d;
+  color: #777;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05); }
@@ -7068,7 +7068,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: #212529 !important; }
 
 .text-muted {
-  color: #6c757d !important; }
+  color: #777 !important; }
 
 .text-black-50 {
   color: rgba(0, 0, 0, 0.5) !important; }
